--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-view-shot')
     compile project(':react-native-push-notification')
     compile project(':realm')
     compile fileTree(dir: "libs", include: ["*.jar"])
