--- a/ios/VibrantDiary/Info.plist
+++ b/ios/VibrantDiary/Info.plist
@@ -38,6 +38,10 @@
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+    <key>NSCameraUsageDescription</key>
+    <string>need access your camera roll~</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>need access your photo library~</string>
 	<key>NSAppTransportSecurity</key>
 	<!--See http://ste.vn/2015/06/10/configuring-app-transport-security-ios-9-osx-10-11/ -->
 	<dict>
