--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react-native": "0.40.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.6",
     "react-native-modal-datetime-picker": "^3.0.1",
+    "react-native-push-notification": "latest",
     "react-native-scrollable-tab-view": "^0.7.0",
+    "react-native-view-shot": "^1.9.1",
     "realm": "^0.15.4",
-    "reflux": "^6.0.0",
-    "react-native-push-notification": "latest"
+    "reflux": "^6.0.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
