--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.6",
+    "react-native-loading-spinner-overlay": "^0.4.2",
     "react-native-modal-datetime-picker": "^3.0.1",
     "react-native-push-notification": "latest",
     "react-native-scrollable-tab-view": "^0.7.0",
