add icon, update some image names.
Signed-off-by: zhangyf <zhangyafei@outlook.com>

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=xiaomubiao-key.jks
+MYAPP_RELEASE_KEY_ALIAS=key-xmb
+MYAPP_RELEASE_STORE_PASSWORD=weikun1127
+MYAPP_RELEASE_KEY_PASSWORD=weikun1127
